board overflow bug in detail view fixed

--- a/styles/board.css
+++ b/styles/board.css
@@ -853,11 +853,13 @@
     padding: 0px;
     gap: 1px;
     width: 523px;
-    height: 146px;
+    max-height: 150px;
     flex: none;
     order: 1;
     flex-grow: 0;
     z-index: 1;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .taskCardPopupTask span {
@@ -876,7 +878,7 @@
 
 .taskCardPopupDescription {
     width: 518px;
-    height: 50px;
+    /* height: 50px; */
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -887,6 +889,10 @@
     order: 2;
     flex-grow: 0;
     z-index: 2;
+    max-height: 100px;
+    overflow: hidden;
+    overflow-y: scroll;
+    min-height: 50px;
 }
 
 .taskCardPopupDateContainer {
